ros-rpi5/ros2_ws/log/build_2026-01-23_13-14-55/speech_recognition/stdout_stderr.log
running egg_info
writing ../../build/speech_recognition/speech_recognition.egg-info/PKG-INFO
writing dependency_links to ../../build/speech_recognition/speech_recognition.egg-info/dependency_links.txt
writing entry points to ../../build/speech_recognition/speech_recognition.egg-info/entry_points.txt
writing requirements to ../../build/speech_recognition/speech_recognition.egg-info/requires.txt
writing top-level names to ../../build/speech_recognition/speech_recognition.egg-info/top_level.txt
reading manifest file '../../build/speech_recognition/speech_recognition.egg-info/SOURCES.txt'
writing manifest file '../../build/speech_recognition/speech_recognition.egg-info/SOURCES.txt'
running build
running build_py
copying speech_recognition/stt_node.py -> /home/pi5/ros2_ws/build/speech_recognition/build/lib/speech_recognition
running install
running install_lib
copying /home/pi5/ros2_ws/build/speech_recognition/build/lib/speech_recognition/stt_node.py -> /home/pi5/ros2_ws/install/speech_recognition/lib/python3.12/site-packages/speech_recognition
byte-compiling /home/pi5/ros2_ws/install/speech_recognition/lib/python3.12/site-packages/speech_recognition/stt_node.py to stt_node.cpython-312.pyc
  File "/home/pi5/ros2_ws/install/speech_recognition/lib/python3.12/site-packages/speech_recognition/stt_node.py", line 256
    prepend_punctuations="\"'"¿([{-",
                              ^
SyntaxError: invalid character '¿' (U+00BF)

running install_data
running install_egg_info
removing '/home/pi5/ros2_ws/install/speech_recognition/lib/python3.12/site-packages/speech_recognition-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/speech_recognition/speech_recognition.egg-info to /home/pi5/ros2_ws/install/speech_recognition/lib/python3.12/site-packages/speech_recognition-0.0.0-py3.12.egg-info
running install_scripts
Installing stt_node script to /home/pi5/ros2_ws/install/speech_recognition/lib/speech_recognition
writing list of installed files to '/home/pi5/ros2_ws/build/speech_recognition/install.log'
